调整tool调用schema约束，重构调用流程
Signed-off-by: Zhenting Zhang <zhenting.zhang@student.unsw.edu.au>